--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "extension-save-to-notion",
   "version": "0.7.0",
   "scripts": {
-    "clean": "rm -rf dist && mkdir dist && mkdir ./dist/injectScripts && cp ./manifest.json dist/. && cp -r ./images dist/. && cp -r ./icons dist/. && cp ./src/popup.html dist/.",
+    "clean": "rm -rf dist && mkdir dist && cp ./manifest.json dist/. && cp -r ./images dist/. && cp -r ./icons dist/. && cp ./src/popup.html dist/.",
     "resetAll": "rm -rf ./node_modules ./dist ./src/options/build ./src/options/node_modules ./src/popup/build ./src/popup/node_modules  ./web-ext-artifacts",
     "prebuild": "npm run clean",
     "build": "npm-run-all build:*",
     "prewatch": "npm run clean",
-    "build:injectscripts": "tsc                -t es2015 ./src/injectScripts/main.ts ./src/injectScripts/background.ts --outDir ./dist/",
-    "watch:injectscripts": "tsc-watch --noClear -t es2015  ./src/injectScripts/main.ts ./src/injectScripts/background.ts --outDir ./dist/",
+    "build:injectscript": "tsc                 -p ./tsconfig.json ./src/injectScript/injectScript.ts ./src/background/background.ts --outDir ./dist/",
+    "watch:injectscript": "tsc-watch --noClear -p ./tsconfig.json ./src/injectScript/injectScript.ts ./src/background/background.ts --outDir ./dist/",
     "watch": "npm-run-all watch:*",
     "dev": "npm run watch",
     "build:firefox": "web-ext --source-dir ./dist build --overwrite-dest",
