--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,21 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-      "target": "es2015",
-      "module": "commonjs",
-      "sourceMap": false,
-      "types": [
-        "@types/chrome",
-        "node"
-      ],
-      "typeRoots": [
-        "node_modules/@types"
-      ],
-      "moduleResolution": "node",
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "strictNullChecks": false,
-      "noImplicitAny": false,
-      "forceConsistentCasingInFileNames": true,
-      "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
-      ]
-    },
-    "include": [
-      "src/injectScripts"
-    ]
-  }
-  
+  "compileOnSave": false,
+  "compilerOptions": {
+    "module": "es2015",
+    "target": "es2016",
+    "sourceMap": false,
+    "types": ["@types/chrome", "node"],
+    "typeRoots": ["node_modules/@types"],
+    "moduleResolution": "node",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es2016", "dom", "dom.iterable"]
+  },
+  "include": ["src/injectScript", "src/background"]
+}
