--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prebuild": "npm run clean",
     "build": "npm-run-all build:*",
     "prewatch": "npm run clean",
-    "build:injectscript": "tsc                 -p ./tsconfig.json ./src/injectScript/injectScript.ts ./src/background/background.ts --outDir ./dist/",
-    "watch:injectscript": "tsc-watch --noClear -p ./tsconfig.json ./src/injectScript/injectScript.ts ./src/background/background.ts --outDir ./dist/",
+    "build:contentscript-background": "NODE_ENV=production webpack",
+    "watch:contentscript-background": "NODE_ENV=development webpack -w",
     "watch": "npm-run-all watch:*",
     "dev": "npm run watch",
     "build:firefox": "web-ext --source-dir ./dist build --overwrite-dest",
@@ -28,13 +28,17 @@
   "author": "Anis Craheix",
   "devDependencies": {
     "@types/chrome": "0.0.91",
+    "@types/node": "^17.0.18",
     "awesome-typescript-loader": "^5.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "ts-loader": "^9.2.6",
     "tsc-watch": "^4.2.9",
     "typescript": "3.7.3"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
