--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "es2015",
-    "target": "es2016",
+    "module": "CommonJS",
+    "target": "ES2016",
     "sourceMap": false,
     "types": ["@types/chrome", "node"],
     "typeRoots": ["node_modules/@types"],
@@ -17,5 +17,9 @@
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2016", "dom", "dom.iterable"]
   },
-  "include": ["src/injectScript", "src/background"]
+  "include": ["src/injectScript", "src/background"],
+  "files": [
+    "./src/injectScript/injectScript.ts",
+    "./src/background/background.ts"
+  ]
 }
