--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "3.7.3"
   },
   "dependencies": {
+    "@editorjs/header": "^2.6.2",
     "uuid": "^8.3.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
