--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/chrome": "0.0.91",
     "@types/node": "^17.0.18",
     "awesome-typescript-loader": "^5.2.1",
+    "editorjs-drag-drop": "^1.0.3",
+    "editorjs-undo": "^2.0.0-rc.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-loader": "^9.2.6",
