--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   },
   "author": "Anis Craheix",
   "devDependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/simple-image": "^1.4.1",
     "@types/chrome": "0.0.91",
     "@types/node": "^17.0.18",
     "awesome-typescript-loader": "^5.2.1",
