--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "author": "Anis Craheix",
   "devDependencies": {
     "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/inline-code": "^1.3.1",
     "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
     "@editorjs/quote": "^2.4.0",
     "@editorjs/simple-image": "^1.4.1",
     "@types/chrome": "0.0.91",
