--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*.airtable.com/app*"],
+      "matches": ["https://*.airtable.com/*"],
       "css": [],
       "js": ["injectScript.js"]
     }
