--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
-  "name": "Airtable Editor Extension",
+  "name": "Airtable Rich Text Editor",
   "version": "0.0.1",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "",
   "icons": {
-    "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
@@ -16,20 +15,23 @@
       "js": ["injectScript.js"]
     }
   ],
-  "permissions": [
-    "storage",
-    "activeTab",
-    "https://*.airtable.com/app*",
-    "cookies"
+  "permissions": ["activeTab"],
+  "host_permissions": ["https://*.airtable.com/app*"],
+  "web_accessible_resources": [
+    {
+      "resources": ["images/*"],
+      "matches": [],
+      "extension_ids": []
+    }
   ],
-  "web_accessible_resources": ["images/*"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": true
+    "service_worker": "background.js"
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_title": "Airtable Editor Extension"
+    "default_title": "Airtable Rich Text Editor"
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval' 'sha256-...='; object-src 'self'"
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
