--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "editorjs-undo": "^2.0.0-rc.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "remark": "^14.0.2",
     "ts-loader": "^9.2.6",
     "tsc-watch": "^4.2.9",
     "typescript": "3.7.3"
